[tool.poetry]
name = "dj-razorpay"
version = "0.1.0"
packages = [{ include = "djrazorpay" }]
description = "Use Razorpay in Django easily"
authors = ["Shahbaz Khan <shahbazkhan425@gmail.com>"]
maintainers = ["Shahbaz Khan <shahbazkhan425@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[tool.poetry.dependencies]
python = "^3.10"
django = ">=4.0"
razorpay = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
